--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,21 +6,50 @@
 
 body{
     background: #000;
+    text-align: center;
+    color:#fff;
+    font-family: 'Verdana', Geneva, Tahoma, sans-serif;
 }
 h1{
-    font-family: 'Verdana', Geneva, Tahoma;
     font-weight:normal;
-    color:white;
-    text-align: center;
     font-size: 50px;
     padding-top: 20px;
 }
+h2{
+    font-size:42px;
+    font-weight:300;
+    padding: 20px 0;
+}
+h4{
+    color:gray;
+    font-size: 21px;
+}
 
-h3{
+p{
     color:aquamarine;
     font-size:16px;
-    text-align: center;
+   text-decoration: underline;
     padding-top: 20px;
 }
 
+video{
+    height: 100%;
+    border:none;
+}
 
+.video-container{
+    display: flex;
+    justify-content: center;
+    border: 1px solid #000;
+    padding-top: 20px;
+}
+
+img{
+    padding-top: 20px;
+}
+.footer p{
+    text-align: right;
+    color:gray;
+    padding: 5px;
+    text-decoration:none;
+}
